# prism-regression

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: boston_housing.py  california_housing.py  concrete_strength.py  dirty_data_demo.py
prism/: __init__.py  regressor.py
prism/prism/: regressor.py
tests/: test_prism.py
